# TradeAlgoAVS

./: .gitignore  .gitmodules  README.md
autonome/agentkit-trader/: .dockerignore  .env.example  Dockerfile  README.md  chatbot.py  docker_test_selenium.py  local_user_test.py  local_wspy_test.py  main.py  pyproject.toml
autonome/agentkit-trader/cdp-agentkit-core/cdp_agentkit_core/actions/finance/wealthsimple/: __init__.py  account_login.py  account_otp.py  action.py  fetch_activities.py  fetch_historical_quotes.py  fetch_news.py  fetch_option_chain.py  fetch_option_expiry.py  fetch_security.py  get_security_ids.py
autonome/agentkit-trader/wealthsimple-core/: Makefile  pyproject.toml
autonome/agentkit-trader/wealthsimple-core/wspy/: __init__.py  client.py  curl_cancel.py  curl_create.py  curl_fetch_activities.py  curl_fetch_historical_quotes.py  curl_fetch_option_chain.py  curl_fetch_option_expiry.py  curl_fetch_security.py  curl_fetch_stock_news.py  curl_modify.py
autonome/agentkit-trader/wealthsimple-core/wspy/curls/: curl_fetch_activities.py  curl_fetch_option_chain.py  curl_fetch_security.py  curl_fetch_stock_news.py  curl_modify.py  template.py
autonome/agentkit-trader/wealthsimple-langchain/: pyproject.toml
autonome/agentkit-trader/wealthsimple-langchain/wealthsimple_langchain/: __init__.py  wealthsimple_api_wrapper.py  wealthsimple_tool.py  wealthsimple_toolkit.py
autonome/test-custom-framework/: Dockerfile  main.py
autonome/test-extend-agentkit/: Dockerfile  chatbot.py  main.py  wallet_data.txt
example/: moving_average.py
nillion-secret-vault/: Dockerfile  README.md  createSchema.js  nillionOrgConfig.js  package-lock.json  package.json  schema-investor.json  schema-strategy.json  schema.json  server.js
telegram-bot/: .dockerignore  .gitignore  Dockerfile  bot.js  example.env  package.json
