[tool.poetry]
name = "TaAVS"
version = "0.0.1"
description = "TaAVS"
authors = ["John Peterson <john.peterson@coinbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
cdp-langchain = "^0.0.13"
cdp-agentkit-core = { path = "./cdp-agentkit-core", develop = true }
wealthsimple-core = { path = "./wealthsimple-core", develop = true }
wealthsimple-langchain = { path = "./wealthsimple-langchain", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
